--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Audiokinetic\Wwise 2022.1.3.8179\SDK\include;D:\Audiokinetic\Wwise 2022.1.3.8179\SDK\samples\SoundEngine\Win32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Audiokinetic\Wwise 2022.1.3.8179\SDK\include;D:\Audiokinetic\Wwise 2022.1.3.8179\SDK\samples\SoundEngine\Win32;C:\Users\Joel.Schultz\Documents\GitHub\playgroundsound\playgroundsound\Wwise\GeneratedSoundBanks;C:\Users\Joel.Schultz\Documents\GitHub\playgroundsound\playgroundsound\playgroundsound\WwiseSource;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
