--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,4 @@ playgroundsound/playgroundsound/x64/Debug/playgroundsound.vcxproj.FileListAbsolu
 playgroundsound/playgroundsound/x64/Debug/playgroundsound.log
 playgroundsound/.vs/playgroundsound/v17/Browse.VC.db
 playgroundsound/.vs/playgroundsound/v17/.suo
+*.ipch
