--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mesh.h" />
     <ClCompile Include="RayLibMaze.cpp" />
     <ClCompile Include="RayLibMaze.h" />
     <ClCompile Include="RayLibThirdPerson.cpp" />
