--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj.filters
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="Mesh.h">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Room.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WwiseAPI.h">
@@ -145,6 +148,9 @@
     </ClInclude>
     <ClInclude Include="DiffractionPath.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Room.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
