Added new music

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,7 @@ playgroundsound/.vs/playgroundsound/v17/Browse.VC.db
 playgroundsound/.vs/playgroundsound/v17/.suo
 *.ipch
 *.prof
+*.wav
+*.akd
+*.bnk
+*.bnk
